force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/ASR_Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>