force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>