force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>