force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <label>In Stock</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>