force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>