force-app/main/01_languageEssentials/templateExpressions/objects/ASR_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>